# Dark-Defi-1

./: .env  .env.example  .gitignore  .gitleaks.toml  .npmrc  .npmrc.example  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WEBSOCKET_SETUP_COMPLETE.md  client_secret_1013652097839-rv5h83t1mln2crs7gqrcjdihdogocrsa.apps.googleusercontent.com.json  package-lock.json  package.json  x402-477302-ad66f8c07261.json
.claude/: settings.json
.playwright-mcp/: page-2026-05-24T16-30-57-470Z.yml  page-2026-05-24T16-33-54-106Z.yml  page-2026-05-24T17-11-35-086Z.yml
Protocol/: client.ts  config.ts  index.ts  privacy.ts  wallet.d.ts.map  wallet.js  wallet.js.map
agentwallet/: package-lock.json  package.json
darkswap/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
docs/: API_KEYS_SETUP.md  BUILD_STATUS.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CROSS_CHAIN_BRIDGE_GUIDE.md  DARK_DEFI_VISION.md  DARK_SWAP_DEPLOYMENT_READY.md  DARK_SWAP_GUIDE.md  DARK_X402_TERMINAL.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DEVNET_DEPLOYMENT.md  HELIUS_INTEGRATION.md  ORACLE_INTEGRATION_GUIDE.md  PROGRAM_INFO.md  QUICK_START.md  QUICK_START_DARK_SWAP.md  QUICK_STARTmain.md  README.md  (+6 more)
programs/: Anchor.toml  Cargo.toml
programs/agent-minter/: Cargo.toml
programs/clawd-stake/: Cargo.toml
programs/llm_oracle/: Cargo.toml
programs/solana-ai-inference/: Cargo.toml
programs/solana-ai-inference/sas-integration/: Anchor.toml  README.md  attestations.json
programs/solana-gpt-oracle/: Cargo.toml
(+106 files in other folders)
