[workspace]
members = [
    "solana-ai-inference",
    "clawd-stake",
    "solana-gpt-oracle",
    "agent-minter",
    "llm_oracle"
]
exclude = [
    "mpl-corenft-staking",
    "token-launcher",
    "token-launchpad"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
